# dectable

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
ext/gtest/: CMakeLists.txt
include/dectable/: DecisionTable.h  Rule.h
src/: CMakeLists.txt  DecisionTable.cpp  Rule.cpp
test/: DecisionTableTest.cpp  PermissionsExample.cpp  main.cpp
